
 * src/editor.c:
   Include new line character(s) when selecting a paragraph.
 * doc/geany.docbook, src/document.c, src/editor.c, src/editor.h,
   src/keybindings.c, src/keybindings.h:
   Add keybinding for Select, Transpose, Cut, Copy and Delete line.
 * src/keybindings.c: Change default shortcut for Find Next/Previous to
                      Ctrl-G and Ctrl-Shift-G.


2007-07-07  Nick Treleaven  <nick.treleaven@btinternet.com>

 * scintilla/ScintillaGTK.cxx, src/highlighting.c, doc/geany.docbook,
   data/filetypes.common:
   Make Scintilla's move to word commands use the word end boundaries
   when moving to the right (like e.g. GtkEntry).
   Treat punctuation chars as whitespace.
   Add filetypes.common setting: whitespace_chars.
 * src/highlighting.c, data/filetypes.python:
   Add decorator (and word2) styling for Python.
 * src/interface.c, src/prefs.c, geany.glade:
   Move Context Action command to Tools tab, group with Print command.


2007-07-06  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/geany.docbook, src/editor.c, src/editor.h, src/keybindings.c,
   src/keybindings.h: Add keybinding for select current paragraph.
 * doc/geany.docbook, src/callbacks.c, src/dialogs.c, src/document.c:
   Use the default GTK file save dialog on Windows.
   Prevent some (probably) unnecessary filename encoding conversions.


2007-07-05  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/search.c: Fix usage of wrong dialog pointer.
 * src/callbacks.c, src/editor.c, src/editor.h, src/geany.h,
   src/keybindings.c:
   Change comment toggle shortcut to Ctrl-E, undefine shortcuts for
   comment/uncomment.
   Improve some selection issues when using comment/uncomment.
   Improve comment toggling by adding an additional character to mark.


2007-07-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/main.c, doc/geany.docbook:
   Add -p, --no-plugins options to disable plugin support.
 * src/main.c:
   Capitalize first letter of command-line argument descriptions.

