@@ -44,7 +44,7 @@
 #define GEANY_USE_WIN32_DIALOG			0
 #define GEANY_CHECK_FILE_DELAY			30
 #define GEANY_WORDCHARS					"_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
-#define GEANY_TOGGLE_MARK				'~'
+#define GEANY_TOGGLE_MARK				"~ "
 #define GEANY_MAX_WORD_LENGTH			192
 #define GEANY_MAX_AUTOCOMPLETE_WORDS	30
 #define GEANY_MAX_AUTOCOMPLETE_HEIGHT	10
